--- a/submid.html
+++ b/submid.html
@@ -327,7 +327,7 @@ section.pricing-section {
                                 </ul>
                             </div>
                             <div class="card-footer">
-                                <button>Choose Plan</button>
+                                <button  onclick="window.location.href='https://buy.stripe.com/test_8wM5kX2MJ1JC5446oo'">Choose Plan</button>
                             </div>
                         </div>
                     </div>
